# agentic-ops-platform

Agentic-Operational-Dashboard/: AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Agentic-Operational-Dashboard/agents_md/: CapacityCostAgent.md  ExecutiveSummaryAgent.md  IncidentAnalystAgent.md  ReleaseReadinessAgent.md  TestStabilityAgent.md
Agentic-Operational-Dashboard/docs/: PORTFOLIO_STORY.md
Agentic-Operational-Dashboard/scripts/: seed_demo_data.py
Agentic-Operational-Dashboard/skills/: capacity_cost.skill.md  executive_summary.skill.md  incident_analyst.skill.md  release_readiness.skill.md  test_stability.skill.md
Agentic-Operational-Dashboard/src/operational_dashboard/: cli.py  config.py
Agentic-Operational-Dashboard/src/operational_dashboard/agents/: base.py  capacity_cost_agent.py  executive_summary_agent.py  incident_analyst_agent.py  release_readiness_agent.py  test_stability_agent.py
Agentic-Operational-Dashboard/src/operational_dashboard/api/: main.py  schemas.py
Agentic-Operational-Dashboard/src/operational_dashboard/connectors/: mock_connectors.py
Agentic-Operational-Dashboard/src/operational_dashboard/db/: base.py  models.py  repository.py
Agentic-Operational-Dashboard/src/operational_dashboard/llm/: client.py
Agentic-Operational-Dashboard/src/operational_dashboard/orchestration/: engine.py
Agentic-Operational-Dashboard/src/operational_dashboard/scoring/: score_engine.py
Agentic-Operational-Dashboard/tests/: test_api.py  test_score_engine.py
Agentic-Operational-Dashboard/ui/: streamlit_app.py
