[project]
name = "agentic-operational-dashboard"
version = "1.0.0"
description = "Portfolio-ready Agentic AI and GenAI operational dashboard"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.37.0",
  "pandas>=2.2.0",
  "plotly>=5.23.0",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
ops-dashboard = "operational_dashboard.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
